# InnoScream

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: api-ci.yml  bot-ci.yml  ci-cd.yml  ci.yml  deploy.yml
app_bot/: logger.py  main.py  utils.py
app_bot/FSM/: admin.py
app_bot/api/: api.py
app_bot/handlers/: adminHandler.py  createAdminHandler.py  getIdHandler.py  historyHandler.py  reactionHandler.py  screamHandler.py  startHandler.py  statsHandler.py
app_bot/initializers/: bot.py
app_bot/keyboards/: adminKeyboards.py  baseKeyboards.py  historyKeyboards.py
app_bot/tests/: test_archive_current_week.py  test_confirm_scream.py  test_create_admin.py  test_delete_scream.py  test_get_all_screams_for_admin.py  test_get_historical_week.py  test_get_history.py  test_get_my_id.py  test_get_next_scream.py  test_get_stress_stats.py  test_get_top_screams.py  test_get_user_stats.py  test_handle_admin_actions.py  test_handle_create_admin.py  test_handle_feed.py  test_handle_get_id.py  test_handle_history.py  test_handle_reaction.py  test_handle_scream.py  test_handle_start.py  test_handle_stress_stats.py  test_handle_top.py  test_handle_user_stats.py  test_post_scream.py  test_react_to_scream.py  test_reaction_keyboard.py  test_send_next_scream.py
app_fastapi/: logger.py  main.py
app_fastapi/api/: endpoints.py
app_fastapi/initializers/: engine.py  migration.py
app_fastapi/middleware/: admin.py
app_fastapi/middlewares/: admin.py
app_fastapi/models/: __init__.py  admin.py  base.py  (+4 more)
docker/: Dockerfile.api  Dockerfile.bot
(+31 files in other folders)
