[project]
name = "innoscream"
version = "0.1.0"
description = ""
authors = [
    {name = "Ekaterina Zaitseva",email = "katy.zaitsewa2207@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.20.0,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "locust (>=2.34.1,<3.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "bandit (>=1.8.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "apscheduler (>=3.10.4,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"